add route for getting all users
